--- a/Network_chat/Network_chat.vcxproj.filters
+++ b/Network_chat/Network_chat.vcxproj.filters
@@ -50,6 +50,15 @@
     <ClCompile Include="GeneratedFiles\qrc_network_chat.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="network.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_network.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_network.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="network_chat.h">
@@ -60,6 +69,9 @@
     </CustomBuild>
     <CustomBuild Include="network_chat.qrc">
       <Filter>Resource Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="network.h">
+      <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
